src/test/ui/issues/issue-28992-empty.stderr
error[E0532]: expected tuple struct/variant, found constant `C1`
  --> $DIR/issue-28992-empty.rs:13:12
   |
LL |     if let C1(..) = 0 {}
   |            ^^ not a tuple struct/variant

error[E0164]: expected tuple struct/variant, found associated constant `<S>::C2`
  --> $DIR/issue-28992-empty.rs:14:12
   |
LL |     if let S::C2(..) = 0 {}
   |            ^^^^^^^^^ not a tuple variant or struct

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0164, E0532.
For more information about an error, try `rustc --explain E0164`.
